Fix version compiling bugs

--- a/software/usb_ir/CMakeLists.txt
+++ b/software/usb_ir/CMakeLists.txt
@@ -235,11 +235,11 @@ install(TARGETS igclient DESTINATION bin)
 If("${CMAKE_ARCH}" STREQUAL "arm")
   Message(STATUS "Skipping Python bits on ARM.")
 Else()
-  find_package(SWIG)
+  # find_package(SWIG)
 
-  ForEach(PYVER 2 3)
-    add_subdirectory(python python${PYVER})
-  EndForEach(PYVER)
+  # ForEach(PYVER 2 3)
+  #   add_subdirectory(python python${PYVER})
+  # EndForEach(PYVER)
 
   If(SWIG_FOUND AND FOUND_SOME_PYTHON)
     message(STATUS "Python and SWIG found; will build Python bindings ${CMAKE_INSTALL_PREFIX}")
